@@ -1,24 +1,21 @@
 package vn.vnpay.service.impl;
 
 import com.google.gson.Gson;
-import com.rabbitmq.client.Channel;
 import io.netty.channel.ChannelFutureListener;
 import io.netty.channel.ChannelHandlerContext;
 import io.netty.handler.codec.http.FullHttpRequest;
 import io.netty.handler.codec.http.HttpRequest;
 import io.netty.util.CharsetUtil;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import vn.vnpay.common.enums.PaymentResponseCode;
 import vn.vnpay.common.exception.GlobalExceptionHandler;
 import vn.vnpay.common.exception.PaymentException;
 import vn.vnpay.common.response.BaseResponse;
 import vn.vnpay.common.response.PaymentHttpResponse;
-import vn.vnpay.config.bankcode.Bank;
+import vn.vnpay.common.response.PaymentResponse;
 import vn.vnpay.config.bankcode.XmlBankValidator;
-import vn.vnpay.config.gson.GsonConfig;
-import vn.vnpay.config.rabbitmq.RabbitMQConfig;
 import vn.vnpay.dto.payment.request.PaymentRequestDTO;
-import vn.vnpay.enums.ExchangeName;
 import vn.vnpay.enums.MessageType;
 import vn.vnpay.service.PaymentService;
 import vn.vnpay.service.RabbitMQService;
@@ -28,35 +25,35 @@ import java.security.SecureRandom;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
-import java.time.temporal.ChronoUnit;
 import java.util.Base64;
-import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+
 @Slf4j
 public class PaymentServiceImpl implements PaymentService {
-    private final RabbitMQConfig rabbitMQConfig;
     private final RedisService redisService;
     private final GlobalExceptionHandler exceptionHandler;
     private final RabbitMQService rabbitMQService;
-    private static final SecureRandom secureRandom = new SecureRandom();
-    private static final Base64.Encoder base64Encoder = Base64.getUrlEncoder();
-    private final Gson gson = GsonConfig.getGson();
+    private final XmlBankValidator xmlBankValidator;
+    private final Gson gson;
     private static final String PHONE_REGEX = "^(03|05|07|08|09)[0-9]{8}$";
-    private static final String currentDirectory = System.getProperty("user.dir");
-    private static final String PATH_BANK_CODE = currentDirectory + "/src/main/resources/bankcode.xml";
 
-    public PaymentServiceImpl(RabbitMQConfig rabbitMQConfig, RedisService redisService, GlobalExceptionHandler exceptionHandler, RabbitMQService rabbitMQService) {
-        this.rabbitMQConfig = rabbitMQConfig;
+    public PaymentServiceImpl(RedisService redisService, GlobalExceptionHandler exceptionHandler,
+                              RabbitMQService rabbitMQService, XmlBankValidator xmlBankValidator,
+                              Gson gson) {
         this.redisService = redisService;
         this.exceptionHandler = exceptionHandler;
         this.rabbitMQService = rabbitMQService;
+        this.xmlBankValidator = xmlBankValidator;
+        this.gson = gson;
     }
 
     @Override
     public void createTokenKey(ChannelHandlerContext ctx, HttpRequest request) {
         try {
+            SecureRandom secureRandom = new SecureRandom();
+            Base64.Encoder base64Encoder = Base64.getUrlEncoder();
             byte[] randomBytes = new byte[24];
             secureRandom.nextBytes(randomBytes);
             String tokenKey = base64Encoder.encodeToString(randomBytes);
@@ -80,12 +77,15 @@ public class PaymentServiceImpl implements PaymentService {
             log.info("Begin create payment: {}", gson.toJson(paymentRequest));
 
             //validate request
-            validateRequest(ctx, paymentRequest);
+            validateRequest(paymentRequest);
 
             //push data to rabbitMQ
             pushDataToRabbitMQ(ctx, paymentRequest);
 
-            ctx.writeAndFlush(PaymentHttpResponse.errorResponseSuccess("demo")).addListener(ChannelFutureListener.CLOSE);
+
+            ctx.writeAndFlush(PaymentHttpResponse
+                            .responseSuccess(gson.toJson(PaymentResponse.success(paymentRequest.getPrivateKey(), paymentRequest.getAddValue()))))
+                    .addListener(ChannelFutureListener.CLOSE);
         } catch (PaymentException pe) {
             exceptionHandler.handleException(ctx, pe, PaymentResponseCode.FIELD_ERROR.getCode(), privateKey);
         } catch (Exception e) {
@@ -95,122 +95,25 @@ public class PaymentServiceImpl implements PaymentService {
 
     private void pushDataToRabbitMQ(ChannelHandlerContext ctx, PaymentRequestDTO request) throws Exception {
 
-            String message = gson.toJson(request);
-            String responseMessage = rabbitMQService.sendMessageWithReply(message,"nettyRoutingKey");
-            log.info("phản hồi từ consumer: {}", responseMessage);
+        String message = gson.toJson(request);
+        String responseMessage = rabbitMQService.sendMessageWithReply(message, "nettyRoutingKey");
+        log.info("phản hồi từ consumer: {}", responseMessage);
     }
 
-    private void validateRequest(ChannelHandlerContext ctx, PaymentRequestDTO request) throws PaymentException {
-        //validate tokenKey
-        validateTokenKey(request);
+    private void validateRequest(PaymentRequestDTO request) throws PaymentException {
 
-        //validate mobile
-        validatePhoneNumber(ctx, request);
-
-        //validate bankCode && privateKey
-        validateBankCodeAndPrivateKey(request);
-
-        //Check debitAmount, realAmount, promotionCode
-        validatePromotionCode(ctx, request);
-
-        //validate payDate
-        validatePayDate(request);
-
-        //validate apiId
-        if (request.getApiId() == null || request.getApiId().isEmpty() || request.getApiId().isBlank()) {
-            throw new PaymentException("apiId không được trống hoặc không có khoảng trắng");
-        }
-
-        //validate oderCode
-        if (request.getOderCode() == null || request.getOderCode().isEmpty() || request.getOderCode().isBlank()) {
-            throw new PaymentException("oderCode không được trống hoặc không có khoảng trắng");
-        }
-
-        //validate respCode
-        if (request.getRespCode() == null || request.getRespCode().isEmpty() || request.getRespCode().isBlank()) {
-            throw new PaymentException("respCode không được trống hoặc không có khoảng trắng");
-        }
-
-        //validate respDesc
-        if (request.getRespDesc() == null || request.getRespDesc().isEmpty()) {
-            throw new PaymentException("respDesc không được trống");
-        }
-
-        //validate traceTransfer
-        if (request.getTraceTransfer() == null || request.getTraceTransfer().isEmpty()) {
-            throw new PaymentException("traceTransfer không được trống");
-        }
-
-        //validate messageType
-        if (request.getMessageType() == null || request.getMessageType().isEmpty()) {
-            throw new PaymentException("messageType không được trống");
-        }
-        if (!request.getMessageType().equals(MessageType.SUCCESS.getCode())) {
-            throw new PaymentException("Giá trị của messageType không chính xác");
-        }
-
-        //validate addValue
-        if (request.getAddValue().getPayMethod() == null || request.getAddValue().getPayMethod().isEmpty()) {
-            throw new PaymentException("payMethod không được trống");
-        }
-        if (request.getAddValue().getPayMethodMMS() == null) {
-            throw new PaymentException("payMethodMMS không được trống");
-        }
-    }
-
-    private void validateTokenKey(PaymentRequestDTO request) throws PaymentException {
-        if (request.getTokenKey() == null || request.getTokenKey().isEmpty() || request.getTokenKey().isBlank()) {
+        //validate token && save token in redis
+        if (StringUtils.isBlank(request.getPrivateKey())) {
             throw new PaymentException("tokenKey không được để trống hoặc có khoảng trắng");
         }
-        if (redisService.existDataFromRedis(request.getTokenKey())){
+        if (redisService.existDataFromRedis(request.getTokenKey())) {
             throw new PaymentException("tokenKey đã trùng lặp trong ngày");
         }
         redisService.saveDataToRedis(request.getTokenKey(), gson.toJson(request));
-    }
 
 
-    private void validatePayDate(PaymentRequestDTO request) throws PaymentException {
-        if (request.getPayDate() == null || request.getPayDate().isEmpty()) {
-            throw new PaymentException("payDate không được trống");
-        }
-        if (!isValidPayDate(request.getPayDate())) {
-            throw new PaymentException("payDate không đúng định dạng");
-        }
-    }
-
-    private static void validateBankCodeAndPrivateKey(PaymentRequestDTO request) throws PaymentException {
-        if (request.getBankCode() == null || request.getBankCode().isEmpty()) {
-            throw new PaymentException("bankCode không được trống.");
-        }
-        if (request.getPrivateKey() == null || request.getPrivateKey().isEmpty()) {
-            throw new PaymentException("privateKey không được trống.");
-        }
-        XmlBankValidator validator = new XmlBankValidator();
-        List<Bank> banks = validator.readBankFromXml(PATH_BANK_CODE);
-        if (!validator.isValidBank(request.getBankCode(), request.getPrivateKey(), banks)) {
-            throw new PaymentException("bankCode and privateKey không cùng 1 ngân hàng.");
-        }
-    }
-
-    private void validatePromotionCode(ChannelHandlerContext ctx, PaymentRequestDTO request) throws PaymentException {
-        // So sánh hai giá trị debitAmount(số tiền thanh toán) và realAmount(số tiền sau khuyến mại)
-        int comparisonResult = request.getDebitAmount().compareTo(request.getRealAmount());
-
-        if (comparisonResult < 0) { // debitAmount nhỏ hơn realAmount
-            throw new PaymentException("Số tiền thanh toán phải hơn số tiền sau khuyến mại.");
-        } else if (comparisonResult == 0) { // debitAmount bằng realAmount
-            if (request.getPromotionCode() != null && !request.getPromotionCode().isEmpty()) {
-                throw new PaymentException("Mã Voucher phải bằng null hoặc rỗng khi không có khuyến mãi.");
-            }
-        } else { // debitAmount lớn hơn realAmount
-            if (request.getPromotionCode() == null || request.getPromotionCode().isEmpty()) {
-                throw new PaymentException("Error code 01: Không có mã voucher, mặc dù số tiền đã giảm.");
-            }
-        }
-    }
-
-    private void validatePhoneNumber(ChannelHandlerContext ctx, PaymentRequestDTO request) throws PaymentException {
-        if (request.getMobile() == null || request.getMobile().isEmpty()) {
+        //validate phoneNumber
+        if (StringUtils.isBlank(request.getMobile())) {
             throw new PaymentException("mobile - Số điện thoại của khách hàng không đuợc để trống.");
         }
         Pattern pattern = Pattern.compile(PHONE_REGEX);
@@ -219,6 +122,73 @@ public class PaymentServiceImpl implements PaymentService {
 
         if (!matcher.matches()) {
             throw new PaymentException("mobile - Sai định dạng số điện thoại của khách hàng.");
+        }
+
+        //validate BankCode && PrivateKey
+        if (StringUtils.isBlank(request.getBankCode())) {
+            throw new PaymentException("bankCode không được trống.");
+        }
+        if (StringUtils.isBlank(request.getPrivateKey())) {
+            throw new PaymentException("privateKey không được trống.");
+        }
+        if (!xmlBankValidator.isValidBank(request.getBankCode(), request.getPrivateKey())) {
+            throw new PaymentException("bankCode and privateKey không cùng 1 ngân hàng.");
+        }
+
+        // So sánh hai giá trị debitAmount(số tiền thanh toán) và realAmount(số tiền sau khuyến mại)
+        int comparisonResult = request.getDebitAmount().compareTo(request.getRealAmount());
+
+        if (comparisonResult < 0) { // debitAmount nhỏ hơn realAmount
+            throw new PaymentException("Số tiền thanh toán phải hơn số tiền sau khuyến mại.");
+        } else if (comparisonResult == 0) { // debitAmount bằng realAmount
+            if (!StringUtils.isEmpty(request.getPromotionCode())) {
+                throw new PaymentException("Mã Voucher phải bằng null hoặc rỗng khi không có khuyến mãi.");
+            }
+        } else { // debitAmount lớn hơn realAmount
+            if (StringUtils.isEmpty(request.getPromotionCode())) {
+                throw new PaymentException("Error code 01: Không có mã voucher, mặc dù số tiền đã giảm.");
+            }
+        }
+
+        if (StringUtils.isEmpty(request.getPayDate())) {
+            throw new PaymentException("payDate không được trống");
+        }
+        if (!isValidPayDate(request.getPayDate())) {
+            throw new PaymentException("payDate không đúng định dạng");
+        }
+
+        if (StringUtils.isBlank(request.getApiId())) {
+            throw new PaymentException("apiId không được trống hoặc không có khoảng trắng");
+        }
+
+        if (StringUtils.isBlank(request.getOderCode())) {
+            throw new PaymentException("oderCode không được trống hoặc không có khoảng trắng");
+        }
+
+        if (StringUtils.isBlank(request.getRespCode())) {
+            throw new PaymentException("respCode không được trống hoặc không có khoảng trắng");
+        }
+
+        if (StringUtils.isEmpty(request.getRespDesc())) {
+            throw new PaymentException("respDesc không được trống");
+        }
+
+        if (StringUtils.isBlank(request.getTraceTransfer())) {
+            throw new PaymentException("traceTransfer không được trống");
+        }
+
+        if (StringUtils.isEmpty(request.getMessageType())) {
+            throw new PaymentException("messageType không được trống");
+        }
+        if (!request.getMessageType().equals(MessageType.SUCCESS.getCode())) {
+            throw new PaymentException("Giá trị của messageType không chính xác");
+        }
+
+        if (StringUtils.isBlank(request.getAddValue().getPayMethod())) {
+            throw new PaymentException("payMethod không được trống");
+        }
+        if (request.getAddValue().getPayMethodMMS() == null) {
+            throw new PaymentException("payMethodMMS không được trống");
         }
     }
 
@@ -230,13 +200,6 @@ public class PaymentServiceImpl implements PaymentService {
         } catch (DateTimeParseException e) {
             return false;
         }
-    }
-
-    // Hàm tính số giây còn lại từ hiện tại đến 0h ngày hôm sau
-    private long getSecondsUntilMidnight() {
-        LocalDateTime now = LocalDateTime.now();
-        LocalDateTime midnight = now.toLocalDate().plusDays(1).atStartOfDay();
-        return ChronoUnit.SECONDS.between(now, midnight);
     }
 
 }
